add new project page and fix header

--- a/pages/chronic-wound-care.html
+++ b/pages/chronic-wound-care.html
@@ -60,6 +60,9 @@
               <li>
                 <a href="./class-II-ventilator.html">Class II ventilator</a>
               </li>
+              <li>
+                <a href="./wound-assessment.html">Wound Assessment</a>
+              </li>
             </ul>
           </li>
           <li>
