--- a/pages/projects.html
+++ b/pages/projects.html
@@ -60,6 +60,9 @@
               <li>
                 <a href="./class-II-ventilator.html">Class II ventilator</a>
               </li>
+              <li>
+                <a href="./wound-assessment.html">Wound Assessment</a>
+              </li>
             </ul>
           </li>
           <li>
@@ -82,10 +85,12 @@
         <!-- PROJECT CARD (HORIZONTAL) BEGINNING -->
         <div class="project colored_bg row jbetween acenter">
           <div class="project_img row jstart astart">
-            <img
-              src="../src/imgs/project_01/img_01.png"
-              alt="Chronic wound care therapy device"
-            />
+            <a href="./chronic-wound-care.html" class="row jstart astart">
+              <img
+                src="../src/imgs/project_01/img_01.png"
+                alt="Chronic wound care therapy device"
+              />
+            </a>
           </div>
           <div class="project_text column astart jstart">
             <p class="project_title">Chronic wound care therapy device</p>
@@ -115,10 +120,12 @@
 
         <div class="project reverse row jbetween acenter">
           <div class="project_img row jstart astart">
-            <img
-              src="../src/imgs/project_02/img_01.png"
-              alt="Mechanical insufflation-exsufflation device"
-            />
+            <a href="./cough-assist.html" class="row jstart astart">
+              <img
+                src="../src/imgs/project_02/img_01.png"
+                alt="Mechanical insufflation-exsufflation device"
+              />
+            </a>
           </div>
           <div class="project_text column astart jstart">
             <p class="project_title">
@@ -149,11 +156,13 @@
         </div>
 
         <div class="project colored_bg row jbetween acenter">
-          <div class="project_img row jstart astart">
-            <img
-              src="../src/imgs/project_03/img_01.png"
-              alt="Veterinary ventilator and anesthesia machine"
-            />
+          <div class="project_img full_img row jstart astart">
+            <a href="./veterinary-ventilator.html" class="row jstart astart">
+              <img
+                src="../src/imgs/project_03/img_01.png"
+                alt="Veterinary ventilator and anesthesia machine"
+              />
+            </a>
           </div>
           <div class="project_text column astart jstart">
             <p class="project_title">
@@ -179,11 +188,13 @@
         </div>
 
         <div class="project reverse row jbetween acenter">
-          <div class="project_img row jstart astart">
-            <img
-              src="../src/imgs/project_04/img_01.jpg"
-              alt="Class II mechanical ventilator"
-            />
+          <div class="project_img full_img row jstart astart">
+            <a href="./class-II-ventilator.html" class="row jstart astart">
+              <img
+                src="../src/imgs/project_04/img_01.jpg"
+                alt="Class II mechanical ventilator"
+              />
+            </a>
           </div>
           <div class="project_text column astart jstart">
             <p class="project_title">Class II mechanical ventilator</p>
@@ -202,6 +213,37 @@
             <p class="project_desc">
               These hard times provided valuable lessons and strengthened my
               ability to adapt and deliver under extreme conditions.
+            </p>
+          </div>
+        </div>
+
+        <div class="project row jbetween acenter">
+          <div class="project_img row jstart astart">
+            <a href="./wound-assessment.html" class="row jstart astart">
+              <img
+                src="../src/imgs/project_05/img_01.png"
+                alt="Wound assessment device"
+              />
+            </a>
+          </div>
+          <div class="project_text column astart jstart">
+            <p class="project_title">Wound assessment device</p>
+            <p class="project_desc">
+              This portable medical device enhances physicians' diagnostic
+              capabilities by extracting key wound parameters invisible to the
+              naked eye. It achieves this through a combination of specialized
+              cameras, light sources, sensors, and AI.
+            </p>
+            <p class="project_desc">
+              Integrated with an online platform, it has the potential to
+              revolutionize the wound-assessment market, benefiting countless
+              patients.
+            </p>
+            <p class="project_desc">
+              Developing this device introduced new challenges, including design
+              for manufacturability (DfM) for high production volumes, image
+              processing and refinement, and the development of AI features
+              tailored to medical applications.
             </p>
           </div>
         </div>
