--- a/pages/wound-assessment.html
+++ b/pages/wound-assessment.html
@@ -75,9 +75,7 @@
     </header>
     <main class="column jcenter astart">
       <section class="banner row jcenter acenter">
-        <p class="projects_title">
-          Mechanical insufflation-exsufflation device
-        </p>
+        <p class="projects_title">Chronic wound care therapy Device</p>
       </section>
 
       <!-- PROJECT LIST -->
@@ -86,27 +84,25 @@
         <div class="project row jbetween acenter">
           <div class="project_img full_img row jstart astart">
             <img
-              src="../src/imgs/project_02/img_01.png"
+              src="../src/imgs/project_05/img_02.png"
               alt="Basic Characteristics"
             />
           </div>
           <div class="project_text column astart jstart">
             <p class="project_title">Basic Characteristics</p>
             <p class="project_desc">
-              This FDA-approved Class II medical device (K233077) was developed
-              under my leadership alongside a multinational team of engineers
-              and medical advisors.
+              Developed as a spinoff of the Chronic Wound Care Therapy device,
+              this system enhances physicians' ability to diagnose chronic
+              wounds and identify key factors preventing closure.
             </p>
             <p class="project_desc">
-              I worked directly with patients and technical staff, employing
-              Human-Centered Design principles to align the product with medical
-              and user requirements while addressing market needs.
+              Featuring specialized cameras, LEDs, and optical filters, it laid
+              the foundation for a larger system integrating AI and
+              multispectral imaging to assess wound status, predict outcomes,
+              and guide treatment decisions.
             </p>
             <p class="project_desc">
-              From concept to stable production, the device was completed within
-              two years and is certified by ANVISA under code 80488299002. It
-              remains in the market, with thousands of units sold over the years
-              by a single small manufacturer.
+              Due to strict IP protection, limited details can be shared.
             </p>
           </div>
         </div>
@@ -115,7 +111,7 @@
         <div class="project reverse row jbetween acenter">
           <div class="project_img full_img row jstart astart">
             <img
-              src="../src/imgs/project_02/img_02.jpg"
+              src="../src/imgs/project_05/img_03.png"
               alt="System Characteristics"
             />
           </div>
@@ -123,23 +119,18 @@
             <p class="project_title">System Characteristics</p>
             <ul>
               <li>
-                Compliant with IEC 60601-1, 60601-1-2, 60601-1-6, 60601-1-9,
-                60601-1-11.
+                Compliant with IEC 60601-1, 60601-1-2, 62471, 62304, 60601-2-57,
+                FDA software guidelines for medical devices, and ISO 13485.
               </li>
               <li>Firmware designed with a hard real-time premise.</li>
+              <li>Battery powered.</li>
               <li>
-                Controls two 150W BLDC motors with fast startup and DC braking.
+                Integration of multiple cameras, PCBs, control devices, and
+                complex sensors.
               </li>
-              <li>Integrated pressure and flow conversion.</li>
               <li>
-                7" touchscreen interface controlled by a single 8-bit
-                microcontroller extracting every possible FLOP of the
-                microcontroller.
-              </li>
-              <li>Lower electronic cost compared to competitors.</li>
-              <li>
-                Three four-layer PCBs that taught me a lot about common-mode EMC
-                noise.
+                AI-driven analysis such as wound segmentation and
+                characterization.
               </li>
             </ul>
           </div>
@@ -148,7 +139,7 @@
         <div class="project row jbetween acenter">
           <div class="project_img full_img row jstart astart">
             <img
-              src="../src/imgs/project_02/img_03.jpg"
+              src="../src/imgs/project_05/img_04.jpg"
               alt="Areas that I had specifically worked on or led"
             />
           </div>
@@ -157,18 +148,25 @@
               Areas that I had specifically worked on or led
             </p>
             <ul>
-              <li>Product Owner.</li>
-              <li>Developed main embedded code in C.</li>
-              <li>Designed the BLDC motor controller board.</li>
-              <li>Represented the company during certification testing.</li>
               <li>
-                Key member of the Software Documentation team and Risk
-                Management Committee.
+                Guided the development of complex imaging fusion algorithms that
+                extract parameters such as StO2 (sometimes referred to as Tissue
+                Oximetry or Near Infrared Spectroscopy).
               </li>
-              <li>Designed and documented production and testing equipment.</li>
+              <li>Developed the electronic hardware and firmware.</li>
               <li>
-                Performed comparative performance analysis against competitors.
+                Developed hardware, embedded firmware, and test/validation
+                procedures using C, Python, and MATLAB.
               </li>
+              <li>
+                Guided the team in implementing critical features and ensuring
+                project alignment.
+              </li>
+              <li>
+                Created regulatory documentation for compliance in the USA,
+                Europe, and Brazil.
+              </li>
+              <li>Development of calibration procedures and algorithms</li>
             </ul>
           </div>
         </div>
