--- a/pages/class-II-ventilator.html
+++ b/pages/class-II-ventilator.html
@@ -60,6 +60,9 @@
               <li>
                 <a href="./class-II-ventilator.html">Class II ventilator</a>
               </li>
+              <li>
+                <a href="./wound-assessment.html">Wound Assessment</a>
+              </li>
             </ul>
           </li>
           <li>
