finish img gallery and fix header/footer

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
               <li>
                 <a href="./pages/class-II-ventilator.html">Class II ventilator</a>
               </li>
+              <li>
+                <a href="./pages/wound-assessment.html">Wound Assessment</a>
+              </li>
             </ul>
           </li>
           <li>
