--- a/pages/class-II-ventilator.html
+++ b/pages/class-II-ventilator.html
@@ -169,6 +169,41 @@
           </div>
         </div>
       </section>
+
+      <!-- IMAGE GALLERY -->
+      <section class="gallery column jcenter acenter">
+        <h2 class="g_title">Gallery</h2>
+        <div class="g_container row jcenter astart">
+          <!-- GALLERY CARD BEGINNING -->
+          <div class="g_card column acenter jstart">
+            <img
+              src="../src/imgs/project_04/img_04.jpg"
+              alt="Gallery Image"
+              class="g_img"
+            />
+            <p class="g_text">One of the production test jigs</p>
+          </div>
+          <!-- GALLERY CARD END -->
+
+          <div class="g_card column acenter jstart">
+            <img
+              src="../src/imgs/project_04/img_05.jpg"
+              alt="Gallery Image"
+              class="g_img"
+            />
+            <p class="g_text">IEC 60601-1 vibration tests</p>
+          </div>
+
+          <div class="g_card column acenter jstart">
+            <img
+              src="../src/imgs/project_04/img_06.png"
+              alt="Gallery Image"
+              class="g_img"
+            />
+            <p class="g_text">IEC 60601-1-2 radiated emissions test</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="column jaround acenter">
       <p>[ ffschneider.consultant@gmail.com] [ +55 27 99910-1403 ]</p>
