finish index responsivity and mobile header

--- a/index.html
+++ b/index.html
@@ -71,10 +71,14 @@
                 <a href="./pages/cough-assist.html">Cough-Assist</a>
               </li>
               <li>
-                <a href="./pages/veterinary-ventilator.html">Veterinary Ventilator</a>
+                <a href="./pages/veterinary-ventilator.html"
+                  >Veterinary Ventilator</a
+                >
               </li>
               <li>
-                <a href="./pages/class-II-ventilator.html">Class II ventilator</a>
+                <a href="./pages/class-II-ventilator.html"
+                  >Class II ventilator</a
+                >
               </li>
               <li>
                 <a href="./pages/wound-assessment.html">Wound Assessment</a>
@@ -82,9 +86,44 @@
             </ul>
           </li>
           <li>
-            <a href="https://wa.me/5527999101403" id="btn-contact"
+            <a
+              target="_blank"
+              href="https://wa.me/5527999101403"
+              id="btn-contact"
               >Get in touch</a
             >
+          </li>
+        </ul>
+      </nav>
+      <ion-icon class="open_menu_btn" name="menu-outline"></ion-icon>
+      <nav class="menu_mobile column astart acenter">
+        <ion-icon class="close_menu_btn" name="close-outline"></ion-icon>
+        <ul class="column jcenter acenter">
+          <li class="selected">
+            <a href="../index.html">Home</a>
+          </li>
+          <li>
+            <a class="selected" href="./pages/projects.html">All Projects</a>
+          </li>
+          <li>
+            <a href="./pages/chronic-wound-care.html">Chronic wound care</a>
+          </li>
+          <li>
+            <a href="./pages/cough-assist.html">Cough-Assist</a>
+          </li>
+          <li>
+            <a href="./pages/veterinary-ventilator.html"
+              >Veterinary Ventilator</a
+            >
+          </li>
+          <li>
+            <a href="./pages/class-II-ventilator.html">Class II ventilator</a>
+          </li>
+          <li>
+            <a href="./pages/wound-assessment.html">Wound Assessment</a>
+          </li>
+          <li>
+            <a href="https://wa.me/5527999101403">Get in touch</a>
           </li>
         </ul>
       </nav>
@@ -365,6 +404,7 @@
         </a>
       </section>
     </main>
+
     <footer class="column jaround acenter">
       <p>[ ffschneider.consultant@gmail.com] [ +55 27 99910-1403 ]</p>
       <a
@@ -375,5 +415,6 @@
       ></a>
     </footer>
     <script src="./src/scripts/carousel.js"></script>
+    <script src="./src/scripts/menu.js"></script>
   </body>
 </html>
