--- a/pages/cough-assist.html
+++ b/pages/cough-assist.html
@@ -66,9 +66,42 @@
             </ul>
           </li>
           <li>
-            <a href="https://wa.me/5527999101403" id="btn-contact"
+            <a
+              target="_blank"
+              href="https://wa.me/5527999101403"
+              id="btn-contact"
               >Get in touch</a
             >
+          </li>
+        </ul>
+      </nav>
+      <ion-icon class="open_menu_btn" name="menu-outline"></ion-icon>
+      <nav class="menu_mobile column astart acenter">
+        <ion-icon class="close_menu_btn" name="close-outline"></ion-icon>
+        <ul class="column jcenter acenter">
+          <li>
+            <a href="../index.html">Home</a>
+          </li>
+          <li>
+            <a href="./projects.html">All Projects</a>
+          </li>
+          <li>
+            <a href="./chronic-wound-care.html">Chronic wound care</a>
+          </li>
+          <li class="selected">
+            <a href="./cough-assist.html">Cough-Assist</a>
+          </li>
+          <li>
+            <a href="./veterinary-ventilator.html">Veterinary Ventilator</a>
+          </li>
+          <li>
+            <a href="./class-II-ventilator.html">Class II ventilator</a>
+          </li>
+          <li>
+            <a href="./wound-assessment.html">Wound Assessment</a>
+          </li>
+          <li>
+            <a href="https://wa.me/5527999101403">Get in touch</a>
           </li>
         </ul>
       </nav>
@@ -219,7 +252,6 @@
           </div>
         </div>
       </section>
-      
     </main>
     <footer class="column jaround acenter">
       <p>[ ffschneider.consultant@gmail.com] [ +55 27 99910-1403 ]</p>
@@ -231,5 +263,6 @@
       ></a>
     </footer>
     <script src="../src/scripts/carousel.js"></script>
+    <script src="../src/scripts/menu.js"></script>
   </body>
 </html>
