finish projects responsivity

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -250,7 +250,7 @@
           </div>
         </div>
 
-        <div class="project row jbetween acenter">
+        <div class="project colored_bg row jbetween acenter">
           <div class="project_img row jstart astart">
             <a href="./wound-assessment.html" class="row jstart astart">
               <img
@@ -401,7 +401,10 @@
       </section>
     </main>
     <footer style="margin-top: 0px" class="column jaround acenter">
-      <p>[ ffschneider.consultant@gmail.com] [ +55 27 99910-1403 ]</p>
+      <div class="footer_text row jcenter acenter">
+        <p>[ ffschneider.consultant@gmail.com]</p>
+        <p>[ +55 27 99910-1403 ]</p>
+      </div>
       <a
         class="social_icon"
         href="https://www.linkedin.com/in/felipe-bas/"
