--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             />
             <p class="skill_title">Development of medical devices</p>
             <p class="skill_desc">
-              With over <b>10 yearsb</b> of experience in developing and leading
+              With over <b>10 years</b> of experience in developing and leading
               teams across various medical device projects, I have contributed
               to advancements in areas such as
               <b>chronic wounds, respiratory systems</b>, and
