--- a/pages/cough-assist.html
+++ b/pages/cough-assist.html
@@ -253,8 +253,11 @@
         </div>
       </section>
     </main>
-    <footer class="column jaround acenter">
-      <p>[ ffschneider.consultant@gmail.com] [ +55 27 99910-1403 ]</p>
+    <footer style="margin-top: 0px" class="column jaround acenter">
+      <div class="footer_text row jcenter acenter">
+        <p>[ ffschneider.consultant@gmail.com]</p>
+        <p>[ +55 27 99910-1403 ]</p>
+      </div>
       <a
         class="social_icon"
         href="https://www.linkedin.com/in/felipe-bas/"
