add meta tags for better SEO

--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
       type="image/x-icon"
     />
 
+    <!-- SEO TAGS -->
+    <meta
+      name="description"
+      content="Felipe Schneider - Electrical Engineer specializing in medical devices and regulatory compliance."
+    />
+    <meta
+      name="keywords"
+      content="Medical Devices, Electrical Engineering, Regulatory Compliance, FDA, IEC, ISO"
+    />
+    <meta name="author" content="Felipe Schneider" />
+
+    <!-- Open Graph (Facebook & LinkedIn) -->
+    <meta
+      property="og:title"
+      content="FF Schneider - Expert in Medical Device Development"
+    />
+    <meta
+      property="og:description"
+      content="Felipe Schneider specializes in developing and leading teams in medical device innovation, regulatory compliance, and hardware/firmware engineering."
+    />
+    <meta
+      property="og:image"
+      content="https://ffschneider.com/src/imgs/banner_photo.png"
+    />
+    <meta property="og:url" content="https://ffschneider.com" />
+    <meta property="og:type" content="website" />
+
     <!-- Modules/Libs -->
     <script
       type="module"
